imagens adicionadas as páginas dos cursos

--- a/cursos/bancodados.html
+++ b/cursos/bancodados.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Banco de Dados</h1>
+    
+        <img src="../img/dados.png" width="310px">
+    
     <p>Tecnologia em Banco de Dados prepara você para entender e utilizar melhor os dados, criando soluções inovadoras a
         partir de um fluxo de conteúdo monitorado e analisado.
         </p>
