--- a/cursos/engcomp.html
+++ b/cursos/engcomp.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Engenharia da Computação</h1>
+    <img src="../img/comp.png" width="310px">
     <p><b>O ENGENHEIRO DA COMPUTAÇÃO</b> desenvolve projetos nas áreas de sistemas operacionais, arquitetura de
     computadores, redes, robótica e inteligência artificial.
         </p>
