--- a/cursos/engprodução.html
+++ b/cursos/engprodução.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Engenharia de Produção</h1>
+    <img src="../img/prod.png" width="310px">
     <p><b>O ENGENHEIRO DE PRODUÇÃO</b> reune conhecimentos das áreas de administração, economia e engenharia. O curso foi planejado para incorporar a influência de ferramentas tecnológicas, indispensáveis para gestão de negócios.</p>
     <p>A grade privilegia conhecimentos avançados na área de exatas (matemática, ciência e tecnologia) e à formação em aspectos políticos, sociais, ambientais, culturais e de sustentabilidade.
         </p>
