--- a/cursos/jogosdigitais.html
+++ b/cursos/jogosdigitais.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Jogos Digitais</h1>
+
+    <img src="../img/jogos.png" width="350px">
     <p>Você vai ser preparado para desenvolver jogos em todas as plataformas: internet, consoles (Playstation, Xbox e
         Nintendo), smartphones (aplicativos para celulares e tablets), desktops (PC e Mac), TV digital, simuladores de realidade
         virtual e virtualizações (totem tour virtual).</p>
