--- a/cursos/rede.html
+++ b/cursos/rede.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Rede de Computadores</h1>
+    <img src="../img/rede.png" width="310px">
     <p>É ministrado em um ambiente que simula uma empresa real, com computadores (SO Linux e Windows), roteadores,
         switches, cabeamento e demais equipamentos, trazendo a vivência que você precisa para ser competitivo no mercado
         de trabalho.</p>
