--- a/cursos/sistemainforção.html
+++ b/cursos/sistemainforção.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Sistemas de Informação</h1>
+    <img src="../img/ti.png" width="310px">
     <p><b>O BACHAREL EM SISTEMAS DE INFORMAÇÃO</b> recebe uma visão ampla das organizações e seus modelos de negócio
         e de como a tecnologia pode amplificar sua estratégia.</p>
     <p>Com conteúdo que vai de hardware a inteligência artificial, passando por gestão empresarial, o curso abrange
