--- a/cursos/ti.html
+++ b/cursos/ti.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Gestão de Tecnologia da Informação</h1>
+    <img src="../img/ti2.png" width="310px">
     <p>Você vai planejar e gerenciar sistemas computacionais (hardware) e de informação (software) nas áreas de processos,
         mobilidade, segurança, tecnologias emergentes, sistemas integrados, big data, cloud computing, engenharia de
         software, marketing digital e redes sociais.
