liganco as páginas

--- a/cursos/analise.html
+++ b/cursos/analise.html
@@ -17,6 +17,7 @@
 Java, .NET, Android e Apple iOS, bem como integrar estas plataformas entre si e com outras, tal como Mainframe e
 SAP.
     </p>
+    <p><a href="adm.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="bancodados.html">Próximo curso</a></p>
     
 </body>
 </html>
