--- a/cursos/rede.html
+++ b/cursos/rede.html
@@ -19,6 +19,7 @@
         estrutura física ao seu potencial de produção, o que aumenta o desempenho. Tudo isso de acordo com as regras de
         segurança.
         </p>
+    <p><a href="jogosdigitais.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="sistemainforção.html">Próximo curso</a></p>
 
     
 </body>
