--- a/cursos/sistemainforção.html
+++ b/cursos/sistemainforção.html
@@ -20,6 +20,7 @@
     <p>A grade foi desenvolvida para que, desde o primeiro ano, os alunos recebam a base necessária para atuarem na área
         de TI de grandes empresas, resolvendo problemas por meio de raciocínio lógico e buscando solução para os desafios
         das organizações.</p>
+        <p><a href="rede.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="sistemainternet.html">Próximo curso</a></p>
     
 
     
