--- a/cursos/sistemainternet.html
+++ b/cursos/sistemainternet.html
@@ -29,6 +29,7 @@
         ou MySQL. Já no segundo ano, o foco é no desenvolvimento de sistemas de portais corporativos, portais colaborativos
         e apps mobile para as plataformas Android e iOS.
         </p>
+        <p><a href="sistemainforção.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="ti.html">Próximo curso</a></p>
 
     
 </body>
