--- a/cursos/ti.html
+++ b/cursos/ti.html
@@ -19,6 +19,7 @@
     <p>A grade foi desenvolvida para que, desde o primeiro ano, os alunos recebam a base necessária para atuarem na área
         de TI de grandes empresas.
         </p>
+        <p><a href="sistemainternet.html">Curso Anterior |</a><a href="../index.html">Página Inicial</a></p>
     
 </body>
 </html>
