--- a/cursos/adm.html
+++ b/cursos/adm.html
@@ -14,5 +14,6 @@
     <p>O curso aborda tanto o lado gerencial quanto o lado estratégico de negócios, em disciplinas como: negociação, liderança e trabalho em equipe, direito empresarial, gestão financeira, gestão de pessoas, marketing, processos e gestão de TI.</p>
     <p>Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e tecnológicos.</p>
        
+    <p><a href="../index.html">Página Inicial |<a href="analise.html">Próximo curso</a></p>
 </body>
 </html>
