--- a/cursos/bancodados.html
+++ b/cursos/bancodados.html
@@ -24,7 +24,7 @@
     <p>Tudo isso por meio do uso de tecnologias como Big Data, Cloud Computing e Mobilidade.</p>
     <p>Através do conceito de Big Data, organize as fontes de dados e utilize-as obtendo insights que embasem as
         corporações para a melhoria da operação do seu negócio.</p>
-    
+        <p><a href="analise.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="engcomp.html">Próximo curso</a></p>
     
 </body>
 </html>
