--- a/cursos/engcomp.html
+++ b/cursos/engcomp.html
@@ -22,5 +22,6 @@
         fabricação e o ‘Maker Labs’, um dos laboratórios mais modernos de engenharia do Brasil, com impressoras 3D,
         usinagem, cortadoras laser e fresadoras de precisão para criação de protótipos e peças em automação simples e com
         CNC (Computer Numeric Control).</p>
+        <p><a href="bancodados.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="engmecatronica.html">Próximo curso</a></p>
 </body>
 </html>
