--- a/cursos/engmecatronica.html
+++ b/cursos/engmecatronica.html
@@ -21,6 +21,6 @@
         Embarcados e Energias Alternativas. Transformar as empresas, aliando empreendedorismo, criatividade e design
         thinking. Este é o Engenheiro Mecatrônico que a FIAP quer formar.
         </p>
-    
+        <p><a href="engcomp.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="engprodução.html">Próximo curso</a></p>
 </body>
 </html>
