--- a/cursos/engprodução.html
+++ b/cursos/engprodução.html
@@ -13,5 +13,8 @@
     <p>A grade privilegia conhecimentos avançados na área de exatas (matemática, ciência e tecnologia) e à formação em aspectos políticos, sociais, ambientais, culturais e de sustentabilidade.
         </p>
     <p>Na FIAP, o futuro engenheiro dispõe de um parque tecnológico avançado, laboratórios de química, informática,fabricação e o Maker Labs, onde você pode ir da ideia ao protótipo, unindo práticas multidisciplinares de mecânica, eletrônica e tecnologia, com impressoras 3D, usinagem, cortadoras laser e fresadoras de precisão.</p>
+
+    <p><a href="engmecatronica.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="jogosdigitais.html">Próximo curso</a></p>
+
 </body>
 </html>
