--- a/cursos/jogosdigitais.html
+++ b/cursos/jogosdigitais.html
@@ -23,7 +23,7 @@
         </p>
     <p>Os professores do curso são especialistas de mercado, com experiência acadêmica, atuantes na área e proprietários
         de empresas que desenvolvem jogos.</p>
-
+    <p><a href="engprodução.html">Curso Anterior |</a><a href="../index.html">Página Inicial |<a href="rede.html">Próximo curso</a></p>   
     
 </body>
 </html>
