correção da tag link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIAP - Página principal</title>
-    <link rel="shurtcut icon" href="img/logo.png"
+    <link rel="shurtcut icon" href="img/logo.png">
 </head>
 <body>
     <h1>FIAP - O novo está aqui</h1>
