--- a/cursos/adm.html
+++ b/cursos/adm.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Administração</title>
+    <link rel="stylesheet" href="../css/fontes.css">
     
 </head>
 <body>
-    <h1>Administração</h1>
+   <center><h1>Administração</h1></center>
    <center><img src="../img/admin.png" width="310px"></center>
-    <p><b>A FIAP tem o melhor curso de Administração de São Paulo</b>, primeiro colocado no ENADE. Isso é consequência de um ambiente de excelência em tecnologia, inovação e empreendedorismo, que desperta nos alunos o pensamento crítico,engajamento social e os prepara para o mercado de trabalho. </p>
-    <p>O curso aborda tanto o lado gerencial quanto o lado estratégico de negócios, em disciplinas como: negociação, liderança e trabalho em equipe, direito empresarial, gestão financeira, gestão de pessoas, marketing, processos e gestão de TI.</p>
-    <p>Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e tecnológicos.</p>
+    <p class="primeiro"><b>A FIAP tem o melhor curso de Administração de São Paulo</b>, primeiro colocado no ENADE. Isso é consequência de um ambiente de excelência em tecnologia, inovação e empreendedorismo, que desperta nos alunos o pensamento crítico,engajamento social e os prepara para o mercado de trabalho. </p>
+    <p class="segundo">O curso aborda tanto o lado gerencial quanto o lado estratégico de negócios, em disciplinas como: negociação, liderança e trabalho em equipe, direito empresarial, gestão financeira, gestão de pessoas, marketing, processos e gestão de TI.</p>
+    <p class="terceiro">Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e tecnológicos.</p>
        
     <p><a href="../index.html">Página Inicial |<a href="analise.html">Próximo curso</a></p>
 </body>
